[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/cube_cavern/cubecavern_memesbruh03.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.788235 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="GAMEOVER" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.788235 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.38068
margin_right = 3.38062
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -16.5
margin_bottom = 16.5
custom_fonts/font = SubResource( 2 )
text = "GAMEOVER"
align = 1
valign = 1

[node name="FIRST" type="NinePatchRect" parent="Control"]
margin_left = 400.0
margin_top = 500.0
margin_right = 520.0
margin_bottom = 530.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RETRY" type="Button" parent="Control/FIRST"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RETRY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FIRST2" type="NinePatchRect" parent="Control"]
margin_left = 800.0
margin_top = 500.0
margin_right = 920.0
margin_bottom = 530.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QUIT" type="Button" parent="Control/FIRST2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
flat = true

[node name="Tween" type="Tween" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Control/FIRST/RETRY" to="." method="_on_RETRY_pressed"]
[connection signal="pressed" from="Control/FIRST2/QUIT" to="." method="_on_QUIT_pressed"]
